--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,5 +3,5 @@
 <%= link_to 'Add New Restaurant', new_restaurant_path %>
 
 <% @restaurants.each do |restaurant| %>
-  <p><%= link_to restaurant.name, restaurant_path(restaurant) %> - <%= restaurant.address %> - <%= restaurant.category %></p>
+  <p><%= link_to restaurant.name, restaurant_path(restaurant) %> - <%= restaurant.address %> - <%= restaurant.category %> - <%= link_to "Add Review", new_restaurant_review_path(restaurant) %></p>
 <% end %>
