--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,20 @@
 <h1><%= @restaurant.name %></h1>
 
+<h3>Category</h3>
 <p><%= @restaurant.category %></p>
+<h3>Phone Number</h3>
 <p><%= @restaurant.phone_number %></p>
+<h3>Adress</h3>
 <p><%= @restaurant.address %></p>
-<%= link_to "All Restaurants", restaurants_path %>
+<h3>Reviews</h3>
+<% @restaurant.reviews.each do |review| %>
+<p><%= review.content %> - <%= review.rating %></p>
+<% end %>
+
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav me-auto">
+    <li class="nav-item active">
+      <%= link_to "Restaurants", restaurants_path, class: "nav-link" %>
+    </li>
+  </ul>
+</div>
