--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
             <li class="nav-item active">
               <%= link_to "Restaurants", restaurants_path, class: "nav-link" %>
             </li>
+            <li>
+              <%= link_to "Add Restaurant", new_restaurant_path, class: "nav-link" %>
+            </li>
           </ul>
         </div>
       </div>
