--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,5 @@
 <h1>This are all the Restaurants</h1>
 
-<%= link_to 'Add New Restaurant', new_restaurant_path %>
-
 <% @restaurants.each do |restaurant| %>
-  <p><%= link_to restaurant.name, restaurant_path(restaurant) %> - <%= restaurant.address %> - <%= restaurant.category %> - <%= link_to "Add Review", new_restaurant_review_path(restaurant) %></p>
+  <p><%= link_to restaurant.name, restaurant_path(restaurant) %> - <%= restaurant.address %> - <%= restaurant.category %> - <%= link_to "Add Review", new_restaurant_review_path(restaurant), class: "btn btn-success" %></p>
 <% end %>
